syntax = "proto3";

option go_package = "launcher/internal/biz/danmaku";
//option java_multiple_files = true;
//option java_package = "ren.sikong.danmaku";
//option java_outer_classname = "DanmakuDaemonProto";

package danmaku;

message StartWatcherRequest {
    string session_id = 1;
    int32 room_id = 2;
}

message StartWatcherResponse {
    bool result = 1;
    string message = 2;
}

service DanmakuDaemon {
    rpc StartWatcher (StartWatcherRequest) returns (StartWatcherResponse) {};
}
